Fix double scrollbar

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 */
 
 body,html {
-	overflow-x: hidden;
+	/* overflow-x: hidden; */
 }
 
 .grecaptcha-badge {
